# physi-cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README  README.md
.github/workflows/: ci.yml
examples/: minimal_example.cpp
include/physi/: physi.hpp
include/physi/core/: quantity.hpp
include/physi/quantities/: amount_of_substance.hpp  current.hpp  length.hpp  luminosity.hpp  mass.hpp  temperature.hpp  time.hpp
include/physi/quantities/complex/: accelleration.hpp  area.hpp  capacitance.hpp  density.hpp  electric_charge.hpp  energy.hpp  force.hpp  moment_of_inertia.hpp  momentum.hpp  power.hpp  pressure.hpp  resistance.hpp  speed.hpp  voltage.hpp  volume.hpp
include/physi/vec/: vec.hpp
tests/: CMakeLists.txt  test_units.cpp
